examples/test/testpolicy13041.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13041
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key30: value46
      key35: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value16
          key32: value38
          key49: value11
      podSelector:
        matchLabels:
          key2: value22
          key12: value45
